--- a/themes/ro/scss/theme/_page_header.scss
+++ b/themes/ro/scss/theme/_page_header.scss
@@ -23,7 +23,7 @@ $pg-header-blue: rgb(213, 225, 241);
     color: $black;
     font-family: $um-font-pg-title;
     font-size: 1.875rem;
-    line-height: 1;
+    line-height: 1.2;
     margin: 0;
   }
 
